added users create view and user sessions

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -11,4 +11,4 @@
   <%= render @projects %>
 </div>
 
-<%= link_to 'Create Project', 'projects/new' %>
+<%= link_to 'Create Project', new_project_path %>
