--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,26 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<%= form_for @user do |f| %>
+  <% if @user.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being created:</h2>
+      <h2><%@user.errors.each do |error| %>
+      <%= error %> </h2>
+      <% end %>    
+    </div>
+   <% end %>
+  
+
+    <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, class: "form_control", required: true %>
+    </div>
+    <div class="form-group">
+        <%= f.label :password %>
+        <%= f.password_field :password, class: "form_control", required: true %>
+    </div>
+        <div class="form-group">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, class: "form_control", required: true %>
+    </div>
+    <%= f.submit "Register", class: 'btn btn-primary btn-lg' %>
+ 
+<% end %>
