--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,20 @@
 
   <body>
 
+    <% if flash[:notice] %>
+     <div class="alert"><%= flash[:notice] %></div>
+    <% end %>
+
     <%= yield %>
+
+    <% if current_user %>
+      <%= link_to current_user.email, user_path(current_user.id) %>
+
+      <%= link_to "Log out", logout_path %>
+    <% else %>
+      <%= link_to "Sign up", signup_path %> or
+      <%= link_to "Log in", login_path %>.
+    <% end %>
 
   </body>
 </html>
