Users show page continued

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,14 @@
 
 <p>
- <strong>Email:</strong>
- <%= @user.email %>
-</p>
-
-<p>
  <strong>MBTI:</strong>
 
   <%= @user.personality.mbti %>
 
  </p>
+
+ <% @projects.each do |project| %>
+ <%= project.title %> <br> <%=project.description %> <br> <%= project.participants %> <br>
+  <% end %>
+
+
+  <br>
