--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -3,6 +3,6 @@
     Description: <%=project.description %> <br>
     Start Date: <%= project.start_date %> <br>
     Location: <%= project.location %> <br>
-    Founder: <%= @founder.email %> <br>
+    Founder: <%= project.founder.email %> <br>
     Number of Participants: <%= project.participants %></p>
 </div>
