added skills model and association, modified views for users new and users show, removed unnecessary columns from projects and users table

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -5,4 +5,7 @@
     Location: <%= project.location %> <br>
     Founder: <%= project.founder.email %> <br>
     Number of Participants: <%= project.participants %></p>
+
+     <%= button_to 'Join this project', project_path, :method => 'post'%>
+
 </div>
