--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,10 @@
     </div>
    <% end %>
 
-
+    <div class="form-group">
+        <%= f.label :name %>
+        <%= f.text_field :name, class: "form_control", required: true %>
+    </div>
     <div class="form-group">
         <%= f.label :email %>
         <%= f.email_field :email, class: "form_control", required: true %>
