--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,14 @@
       <%= link_to current_user.email, user_path(current_user.id) %>
 
       <%= link_to "Log out", logout_path %>
+      <% if current_user.membership_requests.any? %> <br>
+      <%= link_to pluralize(current_user.membership_requests.count, "pending participation request"), user_path(current_user.id)  %> 
+      <% end %>
     <% else %>
       <%= link_to "Sign up", signup_path %> or
       <%= link_to "Log in", login_path %>.
     <% end %>
 
+   
   </body>
 </html>
