--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -3,10 +3,10 @@
     Description: <%=project.description %> <br>
     Start Date: <%= project.start_date %> <br>
     Location: <%= project.location %> <br>
-    Founder: <%= @founder.name %> <br>
+    Founder: <%= project.user.name %> <br>
     Number of Participants: <%= project.participants %><br>
     Skills required: <%= project.skills_required %></p>
 
-     <%= button_to 'Join this project'%>, project_path, :method => 'post'
+     <%= button_to 'Join this project', project_memberships_path(project), :method => 'post'%> 
 
 </div>
