--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,13 @@
  *= require foundation_and_overrides
 
  */
+
+/*body { 
+  background: url("http://www.ritholtz.com/blog/wp-content/uploads/2012/12/myers-briggs.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  opacity: 100%;
+  color:white;
+ }*/
