Scores create view to show user test results

--- a/app/views/scores/create.html.erb
+++ b/app/views/scores/create.html.erb
@@ -1,2 +1,8 @@
-<h1>Scores#create</h1>
-<p>Find me in app/views/scores/create.html.erb</p>
+<h1>Thank You for taking the test!</h1>
+
+<p> Your Score was: <p>
+<p> IE: <%= @score.extraversion %><p>
+<p> SN: <%= @score.openness %><p>
+<p> FT: <%= @score.agreeableness %><p>
+<p> JP: <%= @score.conscientiousness %><p>
+<p> Your new MBTI is: <%= @score.mbti %><p>
