--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,15 @@
+<% if current_user.nil? %>
+<div class="jumbotron">
+  <h1>Hello, world!</h1>
+  <p>...</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
+<% end %>
+
+<p>Please log-in</p>
+
+
+
 <h1>Projects</h1>
 
 
@@ -11,4 +23,8 @@
   <%= render @projects %>
 </div>
 
+<%= will_paginate @projects, renderer: BootstrapPagination::Rails %>
+
 <%= link_to 'Create Project', new_project_path %>
+
+
