--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,3 @@
-<% if current_user.nil? %>
-<div class="jumbotron">
-
-</div>
-<% end %>
-
-<p>Please log-in</p>
-
 
 
 <h1>Projects</h1>
@@ -16,9 +8,10 @@
   <%= submit_tag "Search" %>
 <% end %>
 <br>
-
+<div class='container'>
 <div id="projects">
   <%= render @projects %>
+</div>
 </div>
 
 <%= will_paginate @projects, renderer: BootstrapPagination::Rails %>
