--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,56 @@
   </head>
 
   <body>
+  <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+                <a class="navbar-brand" href="index.html">Myersbits</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="blog.html">My Profile</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+
+                    </ul>
+
+                     <ul class="nav navbar-nav navbar-right" >
+
+                      <% if current_user %>
+                    <li>
+                      <%= link_to current_user.email, user_path(current_user.id) %>
+                        <%= link_to "Log out", logout_path %>
+                          <% if current_user.membership_requests.any? %>
+                          <%= link_to pluralize(current_user.membership_requests.count, "pending participation request"), user_path(current_user.id)  %>
+                          <% end %>
+                        <% else %>
+
+                      <%= link_to "Sign up", signup_path %>
+                      <%= link_to "Log in", login_path %>  </li>
+                    <% end %>
+
+                </ul>
+
+            </div>
+  </div>
+</nav>
 
     <% if flash[:notice] %>
      <div class="alert"><%= flash[:notice] %></div>
