--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,12 +1,12 @@
 <div class="well">
-  <p> Project: <%= link_to project.title, project_path(project.id) %> <br>
-    Description: <%=project.description %> <br>
+  <h2> Project: <%= link_to project.title, project_path(project.id) %></h2>
+    <p><em>Description: <%=project.description %><br>
     Start Date: <%= project.start_date %> <br>
     Location: <%= project.location %> <br>
     Founder: <%= project.user.name %> <br>
     Number of Participants: <%= project.participants %><br>
     Number of empty slots: <%= project.participants - project.memberships.accepted.count%> <br>
-    Skills required: <%= project.skills_required %></p>
+    Skills required: <%= project.skills_required %></em></p>
 
      <%= button_to 'Join this project', project_memberships_path(project), :method => 'post'%>
 </div>
