--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,150 +46,129 @@ body {
     height: 100%;
   }
 
-  /* remove outer padding */
-  .main .row{
-    padding: 0px;
-    margin: 0px;
-  }
+ /*!
+ * Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
+ * Code licensed under the Apache License v2.0.
+ * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+ */
 
-  /*Remove rounded coners*/
+/* Toggle Styles */
 
-  nav.sidebar.navbar {
-    border-radius: 0px;
-  }
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
 
-  nav.sidebar, .main{
-    -webkit-transition: margin 200ms ease-out;
-      -moz-transition: margin 200ms ease-out;
-      -o-transition: margin 200ms ease-out;
-      transition: margin 200ms ease-out;
-  }
+#wrapper.toggled {
+    padding-left: 250px;
+}
 
-  /* Add gap to nav and right windows.*/
-  .main{
-    padding: 10px 10px 0 10px;
-  }
+#sidebar-wrapper {
+    z-index: 10000;
+    margin-top: -20px;
+    position: fixed;
+    left: 250px;
+    width: 0;
+    height: 100%;
+    margin-left: -250px;
+    overflow-y: auto;
+    background: #000;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
 
-  /* .....NavBar: Icon only with coloring/layout.....*/
+#wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+}
 
-  /*small/medium side display*/
-  @media (min-width: 768px) {
+#page-content-wrapper {
+    width: 100%;
+    position: absolute;
+    padding: 15px;
+}
 
-    /*Allow main to be next to Nav*/
-    .main{
-      position: absolute;
-      width: calc(100% - 40px); /*keeps 100% minus nav size*/
-      margin-left: 40px;
-      float: right;
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
+}
+
+.sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color: #999999;
+}
+
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+    text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+    height: 65px;
+    font-size: 18px;
+    line-height: 60px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+    color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+}
+
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 250px;
     }
 
-    /*lets nav bar to be showed on mouseover*/
-    nav.sidebar:hover + .main{
-      margin-left: 200px;
+    #wrapper.toggled {
+        padding-left: 0;
     }
 
-    /*Center Brand*/
-    nav.sidebar.navbar.sidebar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
-      margin-left: 0px;
-    }
-    /*Center Brand*/
-    nav.sidebar .navbar-brand, nav.sidebar .navbar-header{
-      text-align: center;
-      width: 100%;
-      margin-left: 0px;
+    #sidebar-wrapper {
+        width: 250px;
     }
 
-    /*Center Icons*/
-    nav.sidebar a{
-      padding-right: 13px;
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
     }
 
-    /*adds border top to first nav box */
-    nav.sidebar .navbar-nav > li:first-child{
-      border-top: 1px #e5e5e5 solid;
+    #page-content-wrapper {
+        padding: 20px;
+        position: relative;
     }
 
-    /*adds border to bottom nav boxes*/
-    nav.sidebar .navbar-nav > li{
-      border-bottom: 1px #e5e5e5 solid;
+    #wrapper.toggled #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
     }
-
-    /* Colors/style dropdown box*/
-    nav.sidebar .navbar-nav .open .dropdown-menu {
-      position: static;
-      float: none;
-      width: auto;
-      margin-top: 0;
-      background-color: transparent;
-      border: 0;
-      -webkit-box-shadow: none;
-      box-shadow: none;
-    }
-
-    /*allows nav box to use 100% width*/
-    nav.sidebar .navbar-collapse, nav.sidebar .container-fluid{
-      padding: 0 0px 0 0px;
-    }
-
-    /*colors dropdown box text */
-    .navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
-      color: #777;
-    }
-
-    /*gives sidebar width/height*/
-    nav.sidebar{
-      width: 200px;
-      height: 100%;
-      margin-left: -160px;
-      float: left;
-      z-index: 8000;
-      margin-bottom: 0px;
-    }
-
-    /*give sidebar 100% width;*/
-    nav.sidebar li {
-      width: 100%;
-    }
-
-    /* Move nav to full on mouse over*/
-    nav.sidebar:hover{
-      margin-left: 0px;
-    }
-    /*for hiden things when navbar hidden*/
-    .forAnimate{
-      opacity: 0;
-    }
-  }
-
-  /* .....NavBar: Fully showing nav bar..... */
-
-  @media (min-width: 1330px) {
-
-    /*Allow main to be next to Nav*/
-    .main{
-      width: calc(100% - 200px); /*keeps 100% minus nav size*/
-      margin-left: 200px;
-    }
-
-    /*Show all nav*/
-    nav.sidebar{
-      margin-left: 0px;
-      float: left;
-    }
-    /*Show hidden items on nav*/
-    nav.sidebar .forAnimate{
-      opacity: 1;
-    }
-  }
-
-  nav.sidebar .navbar-nav .open .dropdown-menu>li>a:hover, nav.sidebar .navbar-nav .open .dropdown-menu>li>a:focus {
-    color: #CCC;
-    background-color: transparent;
-  }
-
-  nav:hover .forAnimate{
-    opacity: 1;
-  }
-  section{
-    padding-left: 15px;
-  }
+}
