--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,46 +9,58 @@
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <%= csrf_meta_tags %>
   </head>
 
   <body>
-  <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-           <span class="sr-only">Toggle navigation</span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-      </button>
-       <!-- navbar-brand is hidden on larger screens, but visible when the menu iscollapsed -->
-       <a class="navbar-brand" href="index.html">Myersbits</a>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav">
-        <li>
-          <a href="index.html">
-          <% if current_user.nil? %>
-          <%= link_to "Sign up", signup_path %>
-              <%= link_to "Log in", login_path %>
-              <% else %>
-              <%= link_to current_user.name, user_path(current_user.id) %>
-              <%= link_to "Log out", logout_path %></a>
-              <%= link_to pluralize(current_user.membership_requests.count, "pending request"),user_path(current_user.id)  %>
 
-            <% end %>
-          </a>
-        </li>
-        <li>
-            <a href="about.html">
+  <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+          <div class="navbar-header">
+              <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand">myersBits</a>
+          </div>
+          <center>
+              <div class="navbar-collapse collapse" id="navbar-main">
+                  <ul class="nav navbar-nav">
+                      <li><%= link_to_unless_current('Home', root_path) {  link_to('Home', root_path, class: 'active') } %></li>
+                      <li><a href="#menu-toggle"><%= link_to 'Menu', "", class: 'active', id: 'menu-toggle' %></a></li>
+                  </ul>
+                  <% if current_user %>
+                  <ul class="nav navbar-nav navbar-right">
+                  <li><%= link_to_unless_current('Profile', user_path(current_user.id)) {  link_to('Profile', user_path(current_user.id), class: 'active' ) } %></li>
+                  </ul>
+                  <p class="navbar-text navbar-right"><%= link_to pluralize(current_user.membership_requests.count, "pending request"),notification_path(current_user.id)  %></p>
+                    <p class="navbar-text navbar-right">Signed in as <%= current_user.name %> <%= link_to "Log out", session_path("current"), :method => :delete %></p>
+                  <% else %>
+                    <%= form_tag "/sessions", method: "POST", class: "navbar-form navbar-right" do |f| %>
+                        <div class="form-group">
+                            <%= text_field_tag :email, params[:email], class: "form-control", placeholder: "Email" %>
+                        </div>
+                        <div class="form-group">
+                            <%= password_field_tag :password, "", class: "form-control", placeholder: "Password" %>
+                        </div>
 
-        </li>
-      </ul>
-    </div>
+                        <%= submit_tag "Log in", class: "btn btn-default" %>
+
+
+                        <%= button_to "Sign Up", new_user_path, class: "btn btn-default" %>
+
+                    <% end %>
+                  <% end %>
+                  </form>
+              </div>
+          </center>
+      </div>
   </div>
-  </nav>
+
       <div id="wrapper">
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
@@ -70,8 +82,10 @@
                 <li>
                     <a href="#">Myers Briggs types</a>
                 </li>
-                <li>
+                <li><% if current_user.nil? %>
+                <% else %>
                     <%= link_to "My Profile", user_path(current_user.id) %>
+                    <% end %>
                 </li>
                 <li>
                     <a href><%= link_to "Myers Briggs Test", new_score_path %></a>
@@ -87,7 +101,6 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-10" style="float:right;">
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
                         <%= yield %>
                     </div>
                 </div>
@@ -116,13 +129,6 @@
      <div class="alert"><%= flash[:notice] %></div>
     <% end %>
 
-
-
-    <% if current_user %>
-      <%= link_to current_user.email, user_path(current_user.id) %>
-
-      <%= link_to "Log out", logout_path %>
-    <% end %>
 
   </body>
 </html>
