--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,6 @@
     <title><%= yield(:title) %></title>
 
     <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "vendor/modernizr" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
@@ -76,9 +75,12 @@
                 <li>
                     <a href="#"> <%= link_to "All projects", projects_path %></a>
                 </li>
+                <% if current_user.nil? %>
+                <% else %>
                 <li>
-                    <a href="#"><%= link_to "My projects"%></a>
+                    <a href="#"><%= link_to "My projects", mine_projects_path(current_user.id) %></a>
                 </li>
+                <% end %>
                 <li>
                     <a href="#">Myers Briggs types</a>
                 </li>
@@ -112,10 +114,8 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
