is_participant? method for project show page for members

--- a/app/views/memberships/_membership.html.erb
+++ b/app/views/memberships/_membership.html.erb
@@ -1,4 +1,4 @@
-
+<div class="well">
 <h3>Membership</h3> </br>
 
 <% @memberships.each do |member| %>
@@ -16,5 +16,12 @@
     <p>Member Personality: <%= member.user.personality.title %></p>
   <% end %>
 <% end %>
+</div>
+
+
+
+
+
+
 
 
