--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,3 +3,10 @@
 <div id="project">
   <%= render @project %>
 </div>
+
+
+<% if false %>
+ <%  if @project.is_participant? %>
+   <%=  puts 'aaaaaaaa' %>
+  <%  end %>
+<% end %>
