--- a/app/views/projects/mine.html.erb
+++ b/app/views/projects/mine.html.erb
@@ -9,16 +9,25 @@ groups = {
 
 
 <% groups.each do |methodname, title| %>
-<div class="well">
   <% projects = current_user.send(methodname) %>
   <% if projects.any? %>
       <h1><%= title %></h1>
       <%= render current_user.send(methodname) %>
   <% end %>
-  </div>
 <% end %>
 
 
 
 <% projects = current_user.joined_projects %>
+<div class="well">
+<% current_user.founded_projects.each do |fp| %>
+  <%= fp.title %>
+  <%end%>
+  </div>
+
+  <div class="well">
+<% current_user.joined_projects.each do |jp| %>
+  <%= jp.title %>
+  <%end%>
+  </div>
 
