removed background, create project button, removed toggle

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,12 +1,11 @@
 <h1><%= @project.title %></h1>
 
-<div id="project">
+nb<div id="project">
   <%= render @project %>
 </div>
 
 
-<% if false %>
+
  <%  if @project.is_participant? %>
    <%=  puts 'aaaaaaaa' %>
   <%  end %>
-<% end %>
