--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,6 @@
   <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
           <div class="navbar-header">
-              <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
@@ -30,7 +29,6 @@
               <div class="navbar-collapse collapse" id="navbar-main">
                   <ul class="nav navbar-nav">
                       <li><%= link_to_unless_current('Home', root_path) {  link_to('Home', root_path, class: 'active') } %></li>
-                      <li><a href="#menu-toggle"><%= link_to 'Menu', "", class: 'active', id: 'menu-toggle' %></a></li>
                   </ul>
                   <% if current_user %>
                   <ul class="nav navbar-nav navbar-right">
@@ -92,7 +90,9 @@
                 <li>
                     <a href><%= link_to "Myers Briggs Test", new_score_path %></a>
                 </li>
-
+                <li>
+                    <a href><%= link_to "New Project", new_project_path %></a>
+                </li>
             </ul>
         </div>
         </div>
@@ -117,13 +117,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 
-    <!-- Menu Toggle Script -->
-    <script>
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });
-    </script>
 
     <% if flash[:notice] %>
      <div class="alert"><%= flash[:notice] %></div>
