--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 
+<div class="well">
 <h1><%= @user.name %></h1>
 
 <div class="avatar">
@@ -23,4 +24,21 @@
  Project: <%= project.title %> <br>Description: <%=project.description %> <br> Participants needed: <%= project.participants %> <br> Skills required: <%= project.skills_required %> <br>
   <% end %>
 
+<section>
+    <button id="current-location"> Find projects near me</button>  
 
+</section>
+
+<section>
+  <%= form_tag projects_path, method: :get do %>
+  <%= label_tag :search, "Find projects nearby" %>
+  <%= search_field_tag :search, params[:search] %>
+  <%= submit_tag "Search" %> 
+  <% end %>
+</section>
+
+<section>
+<h3>My Projects</h3>
+  <%= render @projects %> 
+</section>
+</div>
