Batman to the rescue

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -20,4 +20,8 @@
 
 
 
-
+<% if current_user.is_participant?(@project) %>
+  <p> i'm a participant </p>
+<% else %>
+<p>"not a participant"</p>
+  <% end %>
