--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,8 +1,17 @@
+<% flash.each do |key, value| %>
+   <div class="<%= flash_class(key) %> fade_in">
+
+       <button class="close" data-dismiss="alert">×</button>
+         <%= value %>
+   </div>
+<% end %>
+
 <h1><%= @project.title %></h1>
 
 <div id="project">
   <%= render @project %>
 </div>
+
 
 
 <div id="map-canvas" class="well" data-latitude="<%= @project.latitude.to_f %>" data-longitude="<%= @project.longitude.to_f%>"></div>
