--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -8,7 +8,7 @@
     Number of empty slots: <%= project.memberships.count - project.memberships.accepted.count%> <br>
     Skills required: <%= project.skills_required %></em></p>
 
-    <% unless current_user.is_member?(project) or current_user.is_founder?(project) %>
+    <% if current_user && (current_user.is_member?(project) == false or current_user.is_founder?(project) == false) %>
       <%= button_to 'Join this project', project_memberships_path(project), :method => 'post'%>
     <% end %>
 
