--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,31 +32,10 @@
               <div class="navbar-collapse collapse" id="navbar-main">
                   <ul class="nav navbar-nav">
                       <li><%= link_to_unless_current('Home', root_path) {  link_to('Home', root_path, class: 'active') } %></li>
-                      <li><a href="#menu-toggle"><%= link_to 'Menu', "", class: 'active', id: 'menu-toggle' %></a></li>
-                  </ul>
-                  <% if current_user %>
-                  <ul class="nav navbar-nav navbar-right">
-                  <li><%= link_to_unless_current('Profile', user_path(current_user.id)) {  link_to('Profile', user_path(current_user.id), class: 'active' ) } %></li>
-                  </ul>
-                  <p class="navbar-text navbar-right"><%= link_to pluralize(current_user.membership_requests.count, "pending request"),notification_path(current_user.id)  %></p>
-                    <p class="navbar-text navbar-right">Signed in as <%= current_user.name %> <%= link_to "Log out", session_path("current"), :method => :delete %></p>
-                  <% else %>
-                    <%= form_tag "/sessions", method: "POST", class: "navbar-form navbar-right" do |f| %>
-                        <div class="form-group">
-                            <%= text_field_tag :email, params[:email], class: "form-control", placeholder: "Email" %>
-                        </div>
-                        <div class="form-group">
-                            <%= password_field_tag :password, "", class: "form-control", placeholder: "Password" %>
-                        </div>
-
-                        <%= submit_tag "Log in", class: "btn btn-default" %>
-
-
-                        <%= button_to "Sign Up", new_user_path, class: "btn btn-default" %>
-
-                    <% end %>
-                  <% end %>
-                  </form>
+                      <li><a href="#menu-toggle"><%= link_to "", class: 'active', id: 'menu-toggle' do %>
+                        <i class="glyphicon glyphicon-align-justify"></i>
+                      <% end %></a>
+                      </li>
               </div>
           </center>
       </div>
