--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,12 @@
           <center>
               <div class="navbar-collapse collapse" id="navbar-main">
                   <ul class="nav navbar-nav">
-                      <li><%= link_to_unless_current('Home', root_path) {  link_to('Home', root_path, class: 'active') } %></li>
-                      <li><a href="#menu-toggle"><%= link_to 'Menu', "", class: 'active', id: 'menu-toggle' %></a></li>
+                      <li><%= link_to_unless_current('Home', root_path) {  link_to('Home', root_path, class: 'active') } %>
+                      </li>
+                    <li><a href="#menu-toggle"><%= link_to "", class: 'active', id: 'menu-toggle' do %>
+                       <i class="glyphicon glyphicon-align-justify"></i>
+                     <% end %></a>
+                     </li>
                   </ul>
                   <% if current_user %>
                   <ul class="nav navbar-nav navbar-right">
