Navbar position and is_partipant in project view

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -11,7 +11,12 @@
     <% if current_user && (current_user.is_member?(project) == false or current_user.is_founder?(project) == false) %>
       <%= button_to 'Join this project', project_memberships_path(project), :method => 'post'%>
     <% end %>
+</div>
 
+ <div class="well">
+    <% if current_user.is_participant?(project) %>
+         <%= project.team_compatability_for(current_user) %>
+    <% end %>
 </div>
 
 
