--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,18 +26,18 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand">myersBits</a>
           </div>
           <center>
               <div class="navbar-collapse collapse" id="navbar-main">
-                  <ul class="nav navbar-nav">
-                      <li><%= link_to_unless_current('Home', root_path) {  link_to('Home', root_path, class: 'active') } %>
-                      </li>
+                  <ul class="nav navbar-nav navbar-left">
                     <li><a href="#menu-toggle"><%= link_to "", class: 'active', id: 'menu-toggle' do %>
                        <i class="glyphicon glyphicon-align-justify"></i>
                      <% end %></a>
                      </li>
+                      <li><%= link_to_unless_current('Home', root_path) {  link_to('Home', root_path, class: 'active') } %>
+                      </li>
                   </ul>
+              <a class="navbar-brand">myersBits</a>
                   <% if current_user %>
                   <ul class="nav navbar-nav navbar-right">
                   <li><%= link_to_unless_current('Profile', user_path(current_user.id)) {  link_to('Profile', user_path(current_user.id), class: 'active' ) } %></li>
