--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -28,9 +28,6 @@
   </div>
 
 
-
 <% if current_user.is_participant?(@project) %>
-  <p> i'm a participant </p>
-<% else %>
-<p>"not a participant"</p>
-  <% end %>
+  <%= render 'team' %>
+<% end %>
