--- a/app/views/projects/_team.html.erb
+++ b/app/views/projects/_team.html.erb
@@ -1,3 +1,3 @@
 <div class="well">
-    <%= @project.team_compatability_for(current_user) %>
+    <%= @project.team_compatibility_for(current_user).inspect %>
 </div>
