added myers briggs index and show views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,7 +90,7 @@
                 </li>
                 <% end %>
                 <li>
-                    <a href="#">Myers Briggs types</a>
+                    <a href="#"><%= link_to "Myers Briggs types", personalities_path %></a>
                 </li>
                 <li><% if current_user.nil? %>
                 <% else %>
