--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -104,7 +104,10 @@
                     <a href><%= link_to "New Project", new_project_path %></a>
                 </li>
                 <li>
-                    <a href><%= link_to "All Users", users_path %></a>
+                    <a href><%= link_to "Members", users_path %></a>
+                </li>
+                <li>
+                    <a href><%= link_to "My compatibilities", users_path %></a>
                 </li>
             </ul>
         </div>
