--- a/app/views/personalities/show.html.erb
+++ b/app/views/personalities/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Personalities#show</h1>
-<p>Find me in app/views/personalities/show.html.erb</p>
+<h1>Personality: <%= @personality.mbti %></h1>
+
+
+<%= render'personality' %>
+
+
