--- a/app/views/personalities/_personality.html.erb
+++ b/app/views/personalities/_personality.html.erb
@@ -8,8 +8,15 @@
 </ul>
 
 
+
 <%# end %>
 
 <h2> Working Style </h2>
 <%= @personality.at_work %>
+
+<h2> As a Leader </h2>
+<%= @personality.as_leader %>
+
+<h2> As a Team Member </h2>
+<%= @personality.as_team %>
 
