--- a/app/views/personalities/_personality.html.erb
+++ b/app/views/personalities/_personality.html.erb
@@ -2,7 +2,7 @@
 <h2>Fun Facts about <%= @personality.mbti%>s</h2>
 
 <ul>
-<% @personality.description.split(",").each do |traits| %>
+<% @personality.description.split(" ").each do |traits| %>
 <%= traits %>
 <% end %>
 </ul>
