--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,12 @@
 
+<% flash.each do |key, value| %>
+   <div class="<%= flash_class(key) %> fade_in">
+
+       <button class="close" data-dismiss="alert">×</button>
+         <%= value %>
+   </div>
+<% end %>
+
 <div class="well">
 <h1><%= @user.name %></h1>
 
@@ -8,22 +16,17 @@
 
 
 <p>
- <strong>My MBTI: <%= @user.personality.mbti %></strong>
+ <strong>MBTI profile: <%= @user.personality.mbti %></strong>
+</p>
 
-
- </p>
-
-<p>
- <strong>My projects </strong>
-
-
- </p>
 
 
 <section>
-    <button id="current-location"> Find projects near me</button>
-
+<h3><%= @user.name%>'s Projects</h3>
+  <%= render @projects %>
 </section>
+</div>
+
 
 <section>
   <%= form_tag projects_path, method: :get do %>
@@ -32,9 +35,3 @@
   <%= submit_tag "Search" %>
   <% end %>
 </section>
-
-<section>
-<h3>My Projects</h3>
-  <%= render @projects %>
-</section>
-</div>
